fixed a bug that the request modal was clipped if its content got too large.

--- a/app/assets/stylesheets/components/_modal.css.scss
+++ b/app/assets/stylesheets/components/_modal.css.scss
@@ -21,6 +21,7 @@
   }
 
   .modal-body {
+    max-height: none;
     overflow-y: hidden;
     text-align: right;
   }
